# Artifacter

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  all.sh  build.sh  dev.sh  update.ps1  update.sh
.github/actions/: CI.yml
.github/workflows/: CI.yml
api/: Cargo.toml  README.md
api/src/: main.rs
api/src/v0/: generate.rs  mod.rs
app/: Cargo.toml  tauri.conf.json
app/src/: main.rs
assets/: dupe.json  subop.json
bench/: Cargo.toml
bench/src/: main.rs
bindings/node/: Cargo.toml  test.js
bindings/node/src/: lib.rs
bindings/py/: Cargo.toml  build.sh  test.py
bindings/py/src/: lib.rs
bindings/wasm/: Cargo.toml
bindings/wasm/src/: lib.rs
bindings/wasm/test/: index.html  index.js
bot/: Cargo.toml
bot/src/: commands.rs  logger.rs  main.rs  util.rs
bot/src/entity/: linker.rs  mod.rs
dev/: docker-compose.yml
dynamic-assets/: characters.json  image-characters.json  loc.json  namecards.json
lib/: Cargo.toml
lib/apitype/: Cargo.toml
lib/apitype/src/: hsr.rs  lib.rs
lib/enka-api/: Cargo.toml
lib/enka-api/src/: api.rs  cache.rs  character.rs  constants.rs  element.rs  fight_prop.rs  icon.rs  lib.rs  playerinfo.rs  store.rs  user.rs  util.rs
lib/gen-utils/: Cargo.toml
lib/gen-utils/src/: lib.rs
lib/hsr-gen/: Cargo.toml  build.rs
lib/hsr-gen/src/: base.rs  format.rs  gen.rs  lib.rs  main.rs
lib/img/: Cargo.toml
lib/img/src/: lib.rs
lib/mihomo-api/: Cargo.toml
lib/mihomo-api/src/: api.rs  cache.rs  character.rs  lib.rs  store.rs  user.rs
lib/mihoyo-api/: Cargo.toml
lib/mihoyo-api/src/: api.rs  character.rs  store.rs  user.rs
lib/src/: default.rs  lib.rs  types.rs
line/: Cargo.toml
line/src/: main.rs
localization/en-US/: main.json
localization/ja/: main.json
node/: .gitignore  Cargo.toml  build.sh  package.json
old/: Generater.py
py/: .gitignore  Cargo.toml  build.sh  pyproject.toml
py/src/: lib.rs
src/: dupe.rs  gen.rs  main.rs  util.rs
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
wasm/test/: index.html
webapp/: .eslintrc.json  .gitignore  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
webapp/src/: App.tsx  api.tsx  index.css  main.tsx
webapp/src/assets/: artifacter_wasm.d.ts  artifacter_wasm.js  artifacter_wasm_bg.wasm.d.ts
webapp/src/components/: Button.tsx  Center.tsx  CharacterCard.tsx  CharacterSelect.tsx  Divider.tsx  DropdownMenu.tsx  FormatType.tsx  Header.tsx  ImageField.tsx  Loading.tsx  SettingsPanel.tsx
webapp/src/pages/: generate.tsx  index.tsx  layout.tsx
webapp/src/utils/: locale.tsx  useClickEffect.tsx
webapp/src/utils/hooks/: useData.tsx  useGenerate.tsx
webapp/src/utils/recoil/: dataStore.ts  formState.ts
