[package]
name = "artifacter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
dotenv = "0.15.0"
enkanetwork-rs = { git = "https://github.com/neodyland/enkanetwork-rs", version = "0.0.3" }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
image = "0.24.5"

[dependencies.poise]
git = "https://github.com/serenity-rs/poise"
branch = "serenity-next"

[dependencies.serenity]
default-features = false
features = ["builder", "client", "gateway", "model", "utils", "collector", "framework"]
git = "https://github.com/serenity-rs/serenity"
branch = "next"

[dependencies.gen]
path = "./lib"