[workspace]
members = ["lib/*","bin/*"]
resolver = "2"

[workspace.dependencies]
serde_json = "1.0.107"
dotenv = "0.15.0"
base64 = "0.21.5"
env_logger = "0.10.0"
log = "0.4.20"

[workspace.dependencies.reqwest]
version  = "0.11.22"
features = ["rustls-tls-webpki-roots"]

[workspace.dependencies.serde]
version = "1.0.190"
features = ["derive"]