[package]
name = "bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gen = { path = "../lib" }
enkanetwork-rs = { git = "https://github.com/neodyland/enkanetwork-rs", version = "0.0.3" }
tokio = { version = "1.26.0", features = ["full"] }
anyhow = "1.0.69"
show-image = "0.13.1"
