[package]
name = "artifacter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
dotenv = "0.15.0"
enkanetwork-rs = { path = "../enkanetwork-rs" }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
log = "0.4.17"
env_logger = "0.10.0"
read-img = { path = "../lib/img" }
serde = { version = "1.0.157", features = ["derive"] }
sea-orm-migration = "0.11.1"

[dependencies.poise]
git = "https://github.com/serenity-rs/poise"
branch = "serenity-next"

[dependencies.serenity]
default-features = false
features = ["builder", "client", "gateway", "model", "utils", "collector", "framework"]
git = "https://github.com/serenity-rs/serenity"
branch = "next"

[dependencies.gen]
path = "../lib/gen"

[dependencies.sea-orm]
version = "*"
features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ]
default-features = false
