[package]
name = "artifacter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
dotenv = "0.15.0"
enkanetwork-rs = { path = "../enkanetwork-rs" }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
log = "0.4.17"
env_logger = "0.10.0"
serde = { version = "1.0.157", features = ["derive"] }
sea-orm-migration = "0.11.1"

[dependencies.poise]
git = "https://github.com/neodyland/poise"
branch = "serenity-next"
# rev = "dfed53ef14b4a492b2e0903fa154d4187554c84f"
# version = "0.4.1"

[dependencies.serenity]
default-features = false
features = ["builder", "client", "gateway", "model", "utils", "collector", "framework", "rustls_backend"]
git = "https://github.com/neodyland/serenity"
branch = "next"
# rev = "1a03dfb668c2334a054770a767181a86f5d26c7e"
# version = "0.11.5"

[dependencies.gen]
path = "../gen"

[dependencies.sea-orm]
version = "0.11.3"
features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ]
default-features = false
