[package]
edition = "2021"
name = "node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.11.1", default-features = false, features = ["napi4","tokio_rt"] }
napi-derive = "2.11.0"
enkanetwork-rs = { git = "https://github.com/neodyland/enkanetwork-rs", version = "0.0.4" }
gen = { path = "../lib" }
once_cell = "1.17.1"
tokio = { version = "*", features = ["full"] }


[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
