[package]
name = "artifacter-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "artifacter_py"
crate-type = ["cdylib"]

[dependencies]
enkanetwork-rs = { path = "../../enkanetwork-rs" }
pyo3 = "0.18.1"
pyo3-asyncio = { version = "0.18.0", features = ["attributes","tokio-runtime"] }
tokio = { version = "1.26.0", features = ["full"] }
gen = { path = "../../lib/gen" }
once_cell = "1.17.1"
