[package]
name = "enka-api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.74"
image = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
urlencoding = "2.1.3"
usvg = "0.28.0"
resvg = "0.28.0"
filetime = "0.2.22"
log = { workspace = true }

[dependencies.tokio]
version = "1.33.0"
features = ["fs"]
