[package]
name = "hsr-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mihoyo-api = { path = "../mihoyo-api" }
image = { workspace = true }
rusttype = "0.9.3"
imageproc = "0.23.0"
gen-utils = { path = "../gen-utils" }
localization = "0.1.3"

[dependencies.tokio]
version = "1.33.0"
features = ["macros", "rt", "fs"]

[build-dependencies]
localization-build = "0.1.3"
