[package]
name = "hsr-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mihomo-api = { path = "../mihomo-api" }
image = { workspace = true }
rusttype = "0.9.3"
imageproc = "0.23.0"
gen-utils = { path = "../gen-utils" }
localization = "0.1.3"
rand = "0.8.5"
once_cell = { workspace = true }

[dependencies.tokio]
version = "1.33.0"
features = ["macros", "rt", "fs"]

[build-dependencies]
localization-build = "0.1.3"
